# Quack-Compiler

./: .quack.output.swp  README.md  quack.output
AST/: .quack.yxx.swp  AST.cpp  AST.h  CMakeCache.txt  CMakeLists.txt  Makefile  Messages.cpp  cmake_install.cmake  lex.yy.cpp  lex.yy.h  parser  parser.cpp  quack.lxx  quack.output  quack.tab.cxx  quack.tab.hxx  quack.yxx  turnin.ini
AST/drawtree/: Sqr.dot  Sqr.json  complete.dot  complete.json  hands.dot  hands.json
AST/samples/: .TypeWalk.qk.swp  comment.qk  complete_test.qk  dummy_program.qk  string_oe.qk
Assignment0/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  input  lex.yy.cpp  lexerspec.l  scanner  turnin.ini
Parser/: .quack.yxx.swp  CMakeCache.txt  CMakeLists.txt  Makefile  Messages.cpp  Messages.h  README.md  cmake_install.cmake  lex.yy.cpp  lex.yy.h  names.h  parser  parser.cpp  quack.output  quack.tab.cxx  quack.tab.hxx  quack.yxx  soon_to_be_quack.yxx
Parser/samples/: comment_oe.qk
Scanner/: .quack.tab.hxx.swp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  lex.yy.cpp  lex.yy.h  lex_driver.cpp  lexer  quack.lxx  turnin.ini
Scanner/samples/: string.qk  where_end.qk
TypeChecker/: .quack.yxx.swp  .typecheck.cpp.swp  AST.cpp  AST.h  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SymTable.h  cmake_install.cmake  compiler  driver.cpp  lex.yy.cpp  lex.yy.h  parser  parser.cpp  quack.output  quack.tab.cxx  quack.tab.hxx  quack.yxx  tmp  turnin.ini  typecheck.cpp  typecheck.h
TypeChecker/drawtree/: bad_init.dot  bad_init.json  complete.dot  complete.json  hands.json  if.dot  if.json  michal_pt.dot  michal_pt.json  pt.dot  pt.json  trans.json  typewalk.dot  typewalk.json
TypeChecker/samples/: ClassCycle.qk  Pt_Trans.qk  Sqr.qk  SqrDecl.qk  complete_test.qk  dub_class.qk  dummy_program.qk  if.qk  method_redef.qk
demo/: bork.qk
